--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <p class="title">Mohadese Maleki</p>
       <p class="dese">Front-end programmer</p>
       <div class="social">
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-telegram"></i>
+        <i class="fa-brands fa-instagram" style="color: rgba(211, 48, 216, 0.844);"></i>
+        <i class="fa-brands fa-github"  style="color: rgba(1, 1, 1, 0.844);" ></i>
+        <i class="fa-brands fa-telegram"  style="color: rgba(30, 147, 231, 0.844);"></i>
       </div>
     </div>
   </body>
